program-libs/zero-copy-derive/tests/ui/fail/47_tuple_struct_empty.stderr
error: ZeroCopy only supports structs with named fields
 --> tests/ui/fail/47_tuple_struct_empty.rs:6:22
  |
6 | pub struct EmptyTuple();
  |                      ^^
